# PixelGUI

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
assets/shaders/: sprite.fs
include/: CMakeLists.txt
include/glad/: glad.h
include/glm-0.9.7.1/glm/detail/: type_half.inl
src/: stb_image.h  window_callback.cpp
src/game/: Game.cpp  Game.h  GameObject.cpp  GameObject.h
src/ui/: Button.cpp  Button.h  Draggable.cpp  Draggable.h  DraggableButton.cpp  DraggableButton.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  UIElement.cpp  UIElement.h
src/ui/sprite/: CustomMouseSprite.cpp  CustomMouseSprite.h  MultiSprite.cpp  MultiSprite.h  RectangleSpriteComposite.cpp  RectangleSpriteComposite.h  Sprite.cpp  Sprite.h  SpriteComposite.cpp  SpriteComposite.h
src/ui/uielement/: Button.cpp  Button.h  ButtonOnPress.cpp  ButtonOnPress.h  ButtonOnRelease.cpp  ButtonOnRelease.h  Callbackable.cpp  Callbackable.h  Container.cpp  Container.h  CustomMouse.cpp  CustomMouse.h  Draggable.cpp  Draggable.h  DraggableButton.cpp  DraggableButton.h  DraggableButtonResizable.cpp  DraggableButtonResizable.h  EditableValue.cpp  EditableValue.h  ExtendedScene.cpp  ExtendedScene.h  HelperSprite.cpp  HelperSprite.h  PositionAnchor.cpp  PositionAnchor.h  RootScene.cpp  RootScene.h  Scene.cpp  Scene.h  Slider.cpp  Slider.h  TextInput.cpp  TextInput.h  UIElement.cpp  UIElement.h  UIGrid.cpp  UIGrid.h  Widget.cpp  Widget.h
src/uieditor/: DraggableButtonResizable.cpp  DraggableButtonResizable.h  UIEditor.cpp  UIEditor.h
src/utilities/: DebugPrinter.h  StringWriter.cpp  StringWriter.h  messageException.cpp  messageException.h  pgu.cpp  pgu.h
src/window/: Window.cpp  Window.h
src/window/render/: Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture2D.cpp  Texture2D.h
test/: CMakeLists.txt
test/unittests/: TestButton.cpp  TestButton.h  TestGameObject.cpp  TestGameObject.h  TestUIElement.cpp  TestUIElement.h  TestWindow.cpp  TestWindow.h
